--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "lxml>=5.4.0",
+    "numba>=0.61.2",
     "pandas>=2.2.3",
     "yfinance>=0.2.57",
 ]
